<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Метка для поля "Страна" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_country" />

            <!-- TextView для отображения страны -->
            <TextView
                android:id="@+id/country_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Метка для поля "Банк" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_bank" />

            <!-- TextView для отображения банка -->
            <TextView
                android:id="@+id/bank_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Метка для поля "Бренд" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_brand" />

            <!-- TextView для отображения бренда -->
            <TextView
                android:id="@+id/brand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Метка для поля "Номер" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_number" />

            <!-- TextView для отображения номера -->
            <TextView
                android:id="@+id/number_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Метка для поля "Схема" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_scheme" />

            <!-- TextView для отображения схемы -->
            <TextView
                android:id="@+id/scheme_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Метка для поля "Тип" -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_type" />

            <!-- TextView для отображения типа -->
            <TextView
                android:id="@+id/type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>